--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -7,9 +7,8 @@
 
   <div class="large-8 columns">
       <div id="scale">
-		<%= content_tag :span, "", id: "tick" %>
+        <%= content_tag :span, "", id: "tick" %>
         <%= image_tag pet.health_icon, title: pet.feeds.count, id: "health_icon" %>
-        
       </div>
   </div>
 
@@ -21,10 +20,11 @@
 <div class="row">
   <div class="small-12 columns">
     <%=
-      image_tag "#{pet.image_url}_close.png", class: "droppable",
+      image_tag image_path(pet.pet_image), class: "droppable",
+        id: "pet-image",
         data: {
           open: image_path("#{pet.image_url}.png"),
-          closed: image_path("#{pet.image_url}_close.png"),
+          closed: image_path(pet.pet_image)
         }
     %>
     <h2><%= pet.name %></h2>
