--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,7 +4,7 @@
   <h2>Take your pet home</h2>
 
   <div class="row">
-    <% Character.order(:name).all.each do |character| %>
+    <% Character.all.each do |character| %>
       <div class="small-6 large-3 columns character <%= character.name %>">
         <%= image_tag "#{character.name}-ns.png"%>
         <p><%= character.name %></p>
