--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
             <%= link_to "Dashboard", user_path(current_user) %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete %>
           <% else %>
-            <%= link_to "Login", new_user_session_path %>
+            <% unless devise_controller? %>
+              <%= link_to "Login", new_user_session_path %>
+            <% end %>
           <% end %>
         </div>
       </div>
