--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row food">
-    <% @pet.person.meals_people.all.each do |meals_person| %>
+    <% @pet.person.meals_people.each do |meals_person| %>
       <% meal = meals_person.meal %>
       <div class="small-3 large-2 columns">
         <%= image_tag meal.image_url, title: meal.name.titleize, class: ["draggable"],
