--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
-    <title><%= content_for?(:title) ? yield(:title) : "East With Me" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Eat With Me" %></title>
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/custom.modernizr" %>
     <%= csrf_meta_tags %>
