--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -8,7 +8,7 @@
   <div class="large-8 columns">
       <div id="scale">
         <%= content_tag :span, "", id: "tick" %>
-        <%= image_tag pet.health_icon, title: pet.feeds.count, id: "health_icon" %>
+        <%= image_tag pet.health_icon, title: pet.items.count, id: "health_icon" %>
       </div>
   </div>
 
