--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,1 @@
-
-		<section class="screen--main">
-			<h1>Eat with Me</h1>
-			<div class="row">
-				<div class="small-12 columns">
-					<img src="http://placekitten.com/g/400/400" class="icon--character">
-					<h2>Bear</h2>
-				</div>
-			</div>
-      <p>Welcome, <%= current_user.email %>!</p>
-
-			<button class="large button round success">Start!</button>
-
-		</section>
-
-
-		<section class="screen--status">
-			<div class="row">
-				<div class="small-12 columns">
-					YOU JUST ATE PIZZA
-				</div>
-			</div>
-			<div class="row">
-				<div class="small-12 columns">
-					<%= image_tag "bear.png" %>
-					<h2>Bear</h2>
-				</div>
-			</div>
-		</section>
-
+<%= @user.inspect %>
