--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome, <%= @pet.person_name %>!</p>
+<p>Welcome, <%= @pet.child_name %>!</p>
 
 <section class="screen--feed">
   <%= render @pet %>
@@ -10,15 +10,16 @@
   </div>
 
   <div class="row food">
-    <% @pet.person.meals_people.each do |meals_person| %>
-      <% meal = meals_person.meal %>
+    <% @pet.child.children_items.each do |children_item| %>
+      <% item = children_item.item %>
       <div class="small-3 large-2 columns">
-        <%= image_tag meal.image_url, title: meal.name.titleize, class: ["draggable"],
+        <%= image_tag item.image_url, title: item.name.titleize,
+          class: ["draggable"],
           data: {
-            meals_person_id: meals_person.id,
+            children_item_id: children_item.id,
             pet_id: @pet.id,
             tooltip: "",
-            :"tip-id" => meal.id
+            :"tip-id" => item.id
           }
         %>
       </div>
@@ -29,9 +30,16 @@
 
 <div id="justFed" class="reveal-modal small text-center">
   <h2><span id='food-name'>FOOD_NAME</span></h2>
-  <p class="pop-health"><%= image_tag nil, id: "happiness" %> <span id="food-healthy">[[healthy]]</span></p>
+
+  <p class="pop-health">
+    <%= image_tag nil, id: "happiness" %>
+    <span id="food-healthy">[[healthy]]</span>
+  </p>
+
   <h3 class="pop-money"><%= image_tag "money.png" %> + <span id="food-value">x</span> </h3>
+
   <p><%= @pet.name %> is feeling <span id="feeling">xxx</span></p>
+
   <a class="close-reveal-modal">&#215;</a>
 </div>
 
