--- a/app/assets/stylesheets/journal.css.sass
+++ b/app/assets/stylesheets/journal.css.sass
@@ -1,3 +1,14 @@
+@import "definitions"
+
 #journal
   div.item
     cursor: pointer
+
+#log
+  margin-top: 4px
+  .tag
+    background-color: $beigeLighter
+    padding: 6px 10px
+    margin-right: 6px
+    display: inline-block
+    margin-top: 8px
