--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,16 +1,14 @@
-<div class="row top-menu">
-	<div class="small-6 large-6 columns text-right">
-		<p class="user">Welcome, <%= current_user.name %>!</p>
-	</div>
-	<div class="small-6 large-6 columns text-right">
-	  <div id="menu">
-	    <% if user_signed_in? %>
-	      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-	    <% else %>
-	      <% unless devise_controller? %>
-	        <%= link_to "Login", new_user_session_path %>
-	      <% end %>
-	    <% end %>
-	  </div>
-	</div>
-</div>
+<% unless devise_controller? %>
+  <div class="small-6 large-6 columns">
+    <p class="user">Welcome, <%= current_user.name %>!</p>
+  </div>
+  <div class="small-6 large-6 columns text-right">
+    <div id="menu">
+      <% if user_signed_in? %>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path %>
+      <% end %>
+    </div>
+  </div>
+<% end %>
