--- a/app/views/children/journal.html.erb
+++ b/app/views/children/journal.html.erb
@@ -26,7 +26,7 @@
   <%= content_tag :div, id: "log" do %>
     <% @child.children_items.each do |children_item| %>
       <%= content_tag :span, children_item.item_name.titleize, class: "tag" %>
-    <% end %>childrenItems
+    <% end %>
   <% end %>
 </div>
 
