Sort and group tags for food

--- a/app/assets/stylesheets/_definitions.css.sass
+++ b/app/assets/stylesheets/_definitions.css.sass
@@ -1,15 +1,19 @@
-$highlight: #9ACD6C
+$highlight: #9acd6c
 $transLight: rgba(247,245,235,.85)
 $royal: #361984
 
-$beigeLighter: #F7F5EB
+$beigeLighter: #f7f5eb
 $beige: #f2eedc
-$beigeDarker: #DDDAD3
-$greyLight: #F4F4F4
+$beigeDarker: #dddad3
+$greyLight: #f4f4f4
 
-$lightBlue: #A1D1E2
-$lightGreen: #B2CC96
+$lightBlue: #a1d1e2
+$lightGreen: #b2cc96
 
 $background: $beige
 $border: $beigeDarker
 $highlightBorder: $beigeDarker
+
+$badColor: #ef4c23
+$neutralColor: #fcd435
+$goodColor: #44b649
